Nov 13 2002  2.7.1  Fixed packetracker incorrect handling of interdistribution
                     data packets.
Nov 12 2002  2.7.1  Free()'d initial memory allocated for config file parsing
                     in all components, fixed secondary case of kismet_curses
                     not terminating sound/speech forks on an initial conenct
                     failure.
                    Initial tracking of data in bytes through a network
                    Fixed failure to dup some strings before clearing the
                     config memory.
Nov 11 2002  2.7.1  Updated kismet_unmonitor to work with new source format
                    Fixed kismet_curses not terminating sound/speech forks when
                     the initial client connection failed.
                    Updated kismet_hopper to work with new source format
                    Added ability to spread across the channel spectrum when
                     hopping on multiple cards (-d to kismet_hopper)
Nov 10 2002  2.7.1  Initial support for multiple capture sources on one server.
                     MAJOR CHANGES TO THE CONFIG FILE - READ THE NEW DEFAULT
                     CONFIGS OR THINGS WILL NOT WORK.
                    Fixed kismet_monitor to work with the new source format
Nov 09 2002  2.7.1  Added ability to name servers via the "servername" 
                     config file.
                    Fixed bug which included networks flagged by the tracker
                     for removal in XML/CSV/etc
                    Improved XML/CSV/etc export speed
                    Inlined network sorting operators for speed
                    Added __attribute__ ((packed)) to packet fragments
Nov 08 2002  2.7.1  Deprecated the "generic" capture source (not to be confused
                     with the generic card type)
Nov 07 2002  2.7.1  Various errno cleanups throughout the source
                    Updated beacon logging to log beacons with new SSIDs